--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ hr {
 
 .counter {
   color: white;
-
+ display: flex;
   z-index: 2;
   align-items: center;
   flex: auto;
@@ -66,6 +66,26 @@ hr {
   height: fit-content;
   width: 100%;
   border-radius: 10px;
+}
+.image2{
+  object-fit: cover;
+}
+
+@media only screen and (min-width: 1920px) {
+  .cardsblk {
+    padding: 10px;
+    color: black;
+    position: relative;
+    border: rgb(237, 237, 237);
+    border-style: solid;
+    border-radius: 20px;
+    margin: 10px;
+  }
+
+  .image2{
+    border-radius: 20px;
+    object-fit: cover;
+  }
 }
 
 .offersvg {
@@ -148,8 +168,11 @@ hr {
   font-size: 35pt;
   font-weight: bolder;
 }
-
+.tablecontent{
+  justify-content: center;
+}
 .table {
+  overflow-x: scroll;
 
   display: grid;
   grid-template-columns: auto auto auto;
@@ -238,12 +261,10 @@ button {
   padding: 10px;
   color: black;
   position: relative;
-  width: fit-content;
   border: rgb(237, 237, 237);
   border-style: solid;
-  border-width: 1px;
   border-radius: 20px;
-  width: auto;
+  width: fit-content;
   margin: 10px;
 }
 
@@ -256,6 +277,13 @@ button {
   margin: 2px;
 }
 
+.burgermenu:hover {
+  color: black;
+  
+}
+.burgermenustyle:hover {
+  cursor: pointer;
+}
 h2 {
   margin-bottom: 1px;
 }
@@ -298,11 +326,10 @@ h2 {
     padding: 10px;
     color: black;
     position: relative;
-    width: 90px;
     border: rgb(237, 237, 237);
     border-style: solid;
-    border-width: 1px;
     border-radius: 20px;
+    width: fit-content;
     margin: 10px;
   }
 
@@ -331,6 +358,7 @@ h2 {
   height: 70vh;
   display: grid;
   align-items: center;
+  width: 2;
 }
 @media only screen and (max-width: 900px) {
   #firstsection{
