--- a/style.css
+++ b/style.css
@@ -22,21 +22,32 @@ hr {
 }
 
 #containertop {
-  margin-left: 250px;
-  margin-right: 250px;
+  width: 1355px;
+  margin: auto;
   margin-top: 3px;
 }
 
 
 
 .active:hover {
-  color: #732dd9;
   cursor: pointer;
+}
+.active:hover .underlinenav{
+  width: 100%;  
+}
+
+.underlinenav{
+  border-bottom:2px solid #732dd9;
+  width: 0%;
+  transition: 0.5s;
+  justify-items: end;
+  margin-top: 16px;
 }
 
 .active {
+
   margin-top: 16px;
-  margin-right: 30px;
+  margin-right: 35px;
 }
 
 .counter {
@@ -59,13 +70,13 @@ hr {
 }
 #navbar{
   background: white;
-  border-bottom: 1px solid silver;
+  border-bottom: 0.5px solid rgba(217, 216, 216, 0.431);
   position: fixed;
   z-index: 100;
-  padding: 4px;
   width: 100%;
 }
 .topnavright {
+  color: #2a2a2a;
   width: 100%;
   display: flex;
   justify-content: right;
@@ -89,10 +100,13 @@ hr {
 }
 .image2{
   object-fit: cover;
+  
+  width: 300px;
 }
 
 @media only screen and (min-width: 1920px) {
   .cardsblk {
+
     padding: 10px;
     color: black;
     position: relative;
@@ -103,6 +117,7 @@ hr {
   }
 
   .image2{
+    width: 300px;
     border-radius: 20px;
     object-fit: cover;
   }
@@ -140,7 +155,6 @@ hr {
 
 .cardtop {
   position: relative;
-  height: fit-content;
 }
 
 .activea:hover {
@@ -170,9 +184,7 @@ hr {
 
 .topnav {
   background: red;
-  align-items: center;
-  margin: 2px;
-  font-weight: normal;
+  font-weight: lighter;
   display: flex;
   font-size: 11pt;
   background-color: white;
@@ -193,7 +205,6 @@ hr {
 }
 .table {
   overflow-x: scroll;
-
   display: grid;
   grid-template-columns: auto auto auto;
 }
@@ -228,14 +239,17 @@ select {
   padding: 15px;
   border-radius: 0%;
   outline: none;
+  
+  width: 100%;
+  margin-right: 0px;
   padding-left: 10px;
   padding-right: 50px;
   font-size: 12pt;
   color: gray;
 }
 
-
 .filter {
+  width: 100%;
   justify-content: center;
   padding: 20px;
   display: grid;
@@ -258,8 +272,6 @@ select {
   grid-template-columns: auto auto auto auto;
 }
 
-.moveinnow {}
-
 .moveinnowtable {
   display: grid;
   grid-template-columns: auto auto auto;
@@ -267,13 +279,13 @@ select {
 }
 
 .cardsblk {
+
   padding: 10px;
   color: black;
   position: relative;
   border: rgb(237, 237, 237);
   border-style: solid;
   border-radius: 20px;
-  width: fit-content;
   margin: 10px;
 }
 
@@ -335,18 +347,18 @@ h2 {
 @media only screen and (max-width: 1440px) {
 
   #containertop {
-    margin-left: 20px;
-    margin-right: 20px;
+    width: auto;;
+    margin-left: 10px;
+    margin-left: 10px;
     
   }
-  .cardsblk {
+  .cardsblk { 
     padding: 10px;
     color: black;
     position: relative;
     border: rgb(237, 237, 237);
     border-style: solid;
     border-radius: 20px;
-    width: fit-content;
     margin: 10px;
   }
 
@@ -372,7 +384,7 @@ h2 {
 
 #firstsection {
   background-color: white;
-  height: 60vh;
+  height: 65vh;
   margin-top: 90px;
   display: grid;
   align-items: center;
