--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   margin: 0px;
-  font-size: 18px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: .4px;
 }
 
 hr {
@@ -24,7 +25,6 @@ hr {
 #containertop {
   width: 1355px;
   margin: auto;
-  margin-top: 3px;
 }
 
 
@@ -41,13 +41,13 @@ hr {
   width: 0%;
   transition: 0.5s;
   justify-items: end;
-  margin-top: 16px;
+  margin-top: 15px;
 }
 
 .active {
-
-  margin-top: 16px;
-  margin-right: 35px;
+  
+  margin-top: 17px;
+  margin-right: 38px;
 }
 
 .counter {
@@ -69,6 +69,8 @@ hr {
   
 }
 #navbar{
+  display: flex;
+  justify-content: center;
   background: white;
   border-bottom: 0.5px solid rgba(217, 216, 216, 0.431);
   position: fixed;
@@ -76,9 +78,12 @@ hr {
   width: 100%;
 }
 .topnavright {
+  height: 100%;
   color: #2a2a2a;
   width: 100%;
+  font-size: 15px;
   display: flex;
+  align-items: center;
   justify-content: right;
 }
 .burgermenuebtn{
@@ -160,31 +165,48 @@ hr {
 .activea:hover {
   border-style: solid;
   border-width: 1px;
-  padding: 8px;
-  padding-left: 15px;
-  padding-right: 15px;
-  display: flex;
-  margin: 8px;
-  background: #732dd9;
-  color: white;
-  cursor: pointer;
-}
-
-.activea {
   border-style: solid;
   border-width: 1px;
   padding: 8px;
   padding-left: 15px;
   padding-right: 15px;
   display: flex;
-  margin: 8px;
+  background: #732dd9;
+  color: white;
+  cursor: pointer;
+}
+
+.activea {
+  border-radius: 3px;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 1;
+  border-style: solid;
+  border-color: #732dd9;
+  font-size: 11pt;
+  border-width: 1px;
+  padding: 9px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  background: white;
   color: #732dd9;
 
 }
+.logosize{
+  padding-top: 28px;
+  height: 100%;
+  align-items:baseline;
+  margin-bottom: 1px;
+}
 
 .topnav {
+  padding: 0%;
+  margin: 0px;
+  height: 58px;
   background: red;
-  font-weight: lighter;
+  font-weight: 400;
+  font-family: 'Lato', sans-serif;
+  align-items: center;
   display: flex;
   font-size: 11pt;
   background-color: white;
@@ -196,9 +218,19 @@ hr {
   height: auto;
 }
 
+.titlee{
+  margin-left: 54px;
+  margin-right: 54px;
+  font-size: 18px;
+  font-family: 'Lato','regular';
+  text-align: center;
+  align-items: center;
+}
+
 .heading {
+  margin: 0%;
   font-size: 35pt;
-  font-weight: bolder;
+  font-weight: 900;
 }
 .tablecontent{
   justify-content: center;
@@ -232,7 +264,11 @@ hr {
   padding-left:40px ;
   padding-right:40px ;
   background: #732dd9; color: white;
-  border:none
+  border: none;
+  text-transform: uppercase;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  
 }
 
 select {
@@ -241,17 +277,17 @@ select {
   outline: none;
   
   width: 100%;
-  margin-right: 0px;
+  margin-right: 100px;
   padding-left: 10px;
-  padding-right: 50px;
   font-size: 12pt;
   color: gray;
 }
 
 .filter {
-  width: 100%;
+  width: fit-content;
   justify-content: center;
-  padding: 20px;
+  height: 58px;
+  margin-top: 30px;
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
@@ -259,6 +295,13 @@ select {
 .contenttitle {
   display: grid;
   justify-content: center;
+
+  align-items: center;
+}
+.contenttitledata{
+  width: 777px;
+  font-size: 18px;
+  font-family: 'Lato','regular';
   text-align: center;
   align-items: center;
 }
@@ -328,21 +371,7 @@ h2 {
   display: block;
 }
 
-.circle-wrap .inside-circle {
-  width: 122px;
-  height: 122px;
-  border-radius: 50%;
-  background: white;
-  line-height: 120px;
-  text-align: center;
-  margin-top: 14px;
-  margin-left: 14px;
-  color: #1e51dc;
-  position: absolute;
-  z-index: 100;
-  font-weight: 700;
-  font-size: 2em;
-}
+
 
 @media only screen and (max-width: 1440px) {
 
@@ -384,7 +413,7 @@ h2 {
 
 #firstsection {
   background-color: white;
-  height: 65vh;
+  height: 68vh;
   margin-top: 90px;
   display: grid;
   align-items: center;
@@ -410,7 +439,6 @@ h2 {
   }
   .heading {
     font-size: 20pt;
-    font-weight: bolder;
   }
 
   body {
