--- a/style.css
+++ b/style.css
@@ -27,12 +27,13 @@ hr {
 .active:hover {
   cursor: pointer;
 }
-.active:hover .underlinenav{
-  width: 100%;  
+
+.active:hover .underlinenav {
+  width: 100%;
 }
 
-.underlinenav{
-  border-bottom:2px solid #732dd9;
+.underlinenav {
+  border-bottom: 2px solid #732dd9;
   width: 0%;
   transition: 0.5s;
   justify-items: end;
@@ -40,14 +41,14 @@ hr {
 }
 
 .active {
-  
+
   margin-top: 17px;
   margin-right: 38px;
 }
 
 .counter {
   color: white;
- display: flex;
+  display: flex;
   z-index: 2;
   align-items: center;
   flex: auto;
@@ -58,12 +59,14 @@ hr {
   border-radius: 20px;
   font-size: smaller;
 }
-#mySidebar{
+
+#mySidebar {
   display: none;
   height: 100vh;
-  
+
 }
-#navbar{
+
+#navbar {
   justify-content: center;
   background: white;
   border-bottom: 0.5px solid rgba(217, 216, 216, 0.431);
@@ -71,6 +74,7 @@ hr {
   z-index: 100;
   width: 100%;
 }
+
 .topnavright {
   height: 100%;
   color: #2a2a2a;
@@ -80,24 +84,26 @@ hr {
   align-items: center;
   justify-content: right;
 }
-.burgermenuebtn{
+
+.burgermenuebtn {
   border: none;
   background: white;
 }
 
-.searchbtn{
+.searchbtn {
   border: none;
   background: white;
 }
 
 
 .imagex {
-  object-fit:fill;
+  object-fit: fill;
   height: 29vh;
   width: 100%;
   border-radius: 10px;
-  
+
 }
+
 .image {
   object-fit: cover;
   height: 29vh;
@@ -105,16 +111,29 @@ hr {
   width: 100%;
 
   border-radius: 10px;
-  
+
 }
 
-.image2{
-  border-radius:10px;
+.imagex {
+  object-fit: cover;
+  height: 29vh;
+  max-height: 283px;
+  width: 100%;
+
+  border-radius: 10px;
+
+}
+
+.image2 {
+  display: flex;
+  align-items: end;
+  border-radius: 10px;
   margin-top: 50px;
   margin-bottom: 0px;
   object-fit: cover;
-  width: auto;
+  width: -webkit-fill-available;
 }
+
 @media only screen and (min-width: 1920px) {
   .cardsblk {
     color: black;
@@ -124,29 +143,33 @@ hr {
     border-radius: 20px;
   }
 
-  .image2{
-    border-radius:10px;
+  .image2 {
+    border-radius: 10px;
     object-fit: cover;
   }
 }
-.explore{
+
+.explore {
   display: flex;
   width: 100%;
 }
-.explore .explorebtn svg{
+
+.explore .explorebtn svg {
   width: auto;
   justify-content: center;
   align-items: center;
-  
+
 }
-.explorebtn{
+
+.explorebtn {
   width: inherit;
   display: flex;
   justify-content: flex-end;
   margin-left: 6px;
   align-items: end;
 }
-.explorebtn button{
+
+.explorebtn button {
   width: 24px;
   height: 24px;
   padding: 2px;
@@ -155,6 +178,7 @@ hr {
   border: 1px solid rgb(210, 210, 210);
   margin-left: 6px;
 }
+
 .offersvg {
   color: red;
   height: 15px;
@@ -179,12 +203,12 @@ hr {
   right: 10px;
   border-radius: 20px;
   padding: 5px 5px 5px 5px;
-  font-size:12px;
+  font-size: 12px;
 }
 
 .cardtop {
   position: relative;
-  max-width:322px;
+  max-width: 322px;
   max-height: 283px;
 }
 
@@ -218,10 +242,11 @@ hr {
   color: #732dd9;
 
 }
-.logosize{
+
+.logosize {
   padding-top: 28px;
   height: 100%;
-  align-items:baseline;
+  align-items: baseline;
   margin-bottom: 1px;
 }
 
@@ -244,12 +269,12 @@ hr {
   height: auto;
 }
 
-.titlee{
+.titlee {
   margin-left: 60px;
   margin-right: 60px;
   font-size: 18px;
   letter-spacing: 0px;
-  font-family: 'Lato','regular';
+  font-family: 'Lato', 'regular';
   text-align: center;
   align-items: center;
 }
@@ -259,9 +284,11 @@ hr {
   font-size: 48px;
   font-weight: 900;
 }
-.tablecontent{
+
+.tablecontent {
   justify-content: center;
 }
+
 .table {
   display: grid;
   grid-gap: 20px;
@@ -292,29 +319,31 @@ hr {
 }
 
 .search {
-  padding-left:30px ;
-  padding-right:30px ;
-  background: #732dd9; color: white;
+  padding-left: 30px;
+  padding-right: 30px;
+  background: #732dd9;
+  color: white;
   border: none;
   font-weight: 600;
   font-size: 15px;
   text-transform: uppercase;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
-  
+
 }
 
 select {
   padding: 15px;
   border-radius: 0%;
   outline: none;
-  
+
   width: 100%;
   margin-right: 100px;
   padding-left: 10px;
   font-size: 12pt;
   color: gray;
 }
+
 
 .filter {
   width: fit-content;
@@ -332,63 +361,127 @@ select {
 
   align-items: center;
 }
-.contenttitledata{
+
+footer{
+  font-family: 'Lato', sans-serif;
+  display: flex;
+  align-items: center;
+  height: 65px;
+  background-color: #f2f2f2;
+}
+footer button{
+  width: 35px;
+  height: 35px;
+  margin: 0%;
+  border-radius: 50%;
+  padding: 10px;
+  
+  border: none;
+  background: white;
+  margin-right: 10px;
+
+}
+footer button svg{
+  height: 100%;
+  width: 100%;
+  color: rgb(136, 136, 136);;
+}
+.footerlinktoo{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: end;
+
+}
+
+.footer{
+  display: flex;
+  align-items: center;
+  
+}
+.footlinks li{
+  display: inline;
+  margin-right: 20px;
+  border-bottom: 1px solid ;
+  text-align: right;
+font-size: 12px;
+}
+.footerlinktoo p{
+  width: fit-content;
+  display: inline;
+  margin-right: 20px;
+  text-align: right;
+font-size: 12px;
+}
+
+
+.contenttitledata {
   width: 777px;
   font-size: 18px;
-  font-family: 'Lato','regular';
+  font-family: 'Lato', 'regular';
   text-align: center;
   align-items: center;
 }
-.maintitle{
+
+.maintitle {
   margin-top: 23px;
   margin-bottom: 0px;
-  width: 20%;
+  width: 40%;
   font-size: x-large;
   font-weight: 550;
 
 }
-.cardbottom{
-  margin-top: 13px;
+
+.cardbottom {
+  margin-top: 10px;
   margin-bottom: 13px;
   text-transform: uppercase;
   font-size: 70;
 }
+
 .topviewproject {
   border: 0px solid rgb(190, 190, 190);
 }
-.moveinnow p{
+
+.moveinnow p {
   color: rgb(161, 161, 161);
   margin-top: 8px;
   margin-bottom: 20px;
 }
+
 .topviewprojecttable {
-  margin-top: 13px ;
+  margin-top: 13px;
   grid-gap: 25px;
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
+
 .topviewprojecttablee {
-  margin-top: 20px ;
+  margin-top: 20px;
   grid-gap: 15px;
   display: grid;
   grid-template-columns: auto auto auto auto auto;
 }
+
 .moveinnowtable {
   display: grid;
   grid-template-columns: auto auto auto;
 
 }
-.cardsblk h2{
+
+.cardsblk h2 {
   margin-top: 40px;
   margin-left: 40px;
   margin-bottom: 0px;
   font-size: x-large;
 }
-.cardsblk p{
+
+.cardsblk p {
   margin-left: 40px;
   margin-top: 10px;
   color: rgb(154, 153, 153);
 }
+
 .cardsblk {
   margin-bottom: 20px;
   color: black;
@@ -396,7 +489,6 @@ select {
   border: 1px rgb(228, 225, 225);
   border-style: solid;
   border-radius: 10px;
-  
 }
 
 .card {
@@ -404,20 +496,105 @@ select {
   border-radius: 20px;
 }
 
+.getapp{ 
+  margin-top: 100px;
+  height: 398.6px;
+  background-color: #f5f5f5;
+  background-repeat: no-repeat;
+    background-position: 100%;
+    background-size: 670px 100%;
+  background-image: url("https://realtorspk.com/_next/static/media/Mockup.29c3fb38c0962debd1de6fd2589543ce.svg");
+}
+
+.titleforapp{
+  margin-left: auto;
+  margin-right: auto;
+  width: 66vw;
+  height: inherit;
+}
+
+.leftSideapp{
+  height: inherit;
+  display: flex;
+  align-items: center;
+
+}
+.leftSideapp .app  h1{
+  font-size: 36px;
+  margin-bottom: 0.59rem;
+  margin-top: 0rem;
+  font-weight: 500;  
+}
+.leftSideapp .app p{
+  margin-bottom: 1.2rem;
+  margin-top: 0rem;
+  font-size: 20px; 
+}
+
+.leftSideapp .app h1 span{
+  font-weight: bolder;  
+}
+
+/*  */
+
+.getcontact{ 
+
+  height: 338px;
+  background: rgb(248, 248, 248);
+  margin: 0%;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  background-repeat: no-repeat;
+    background-position: 100%;
+    background-size: 670px 100%;
+
+}
+.getcontact .titleforcontact .contact h1{
+  font-size: 24px;
+  color: #2a2a2a;
+  margin-bottom: 5px;
+  margin-bottom: 1.5rem
+}
+.getcontact .titleforcontact .contactnav{
+  border-bottom: 2px solid #e7e7e7;
+  padding: 15px 20px;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+.getcontact .titleforcontact table{
+  width: 100%;
+}
+.getcontact .titleforcontact table td{
+  padding-bottom: 10px;
+  color: #888;
+}
+.getcontact .titleforcontact .contactnav li{
+  display: inline;
+  border-bottom: 2px solid #e7e7e7;
+  padding: 15px 20px;
+}
+.getcontact .titleforcontact .contactnav li:hover{
+  display: inline;
+  color: #732dd9;
+  border-bottom: 2px solid #732dd9;
+  padding: 15px 20px;
+}
 .mobilemenu:hover {
   color: black;
-  
+
 }
+
 .burgermenustyle:hover {
   cursor: pointer;
 }
+
 .searchmenustyle:hover {
   cursor: pointer;
 }
 
 .mobilemenu {
   display: none;
-  width: 100vw; 
+  width: 100vw;
 }
 
 .burgermenustyle {
@@ -425,6 +602,7 @@ select {
   height: 30px;
   display: block;
 }
+
 .searchmenustyle {
   width: 30px;
   height: 30px;
@@ -436,11 +614,13 @@ select {
 @media only screen and (max-width: 1440px) {
 
   #containertop {
-    width: auto;;
+    width: auto;
+    ;
     margin-left: 10px;
     margin-left: 10px;
   }
-  .cardsblk { 
+
+  .cardsblk {
     color: black;
     position: relative;
     border: rgb(237, 237, 237);
@@ -448,28 +628,31 @@ select {
     border-radius: 20px;
   }
 
- 
+
   .table {
     overflow-x: scroll;
 
   }
-  
+
   .table::-webkit-scrollbar {
     display: none;
   }
-.topviewprojecttable {
-  margin-top: 20px ;
-  display: grid;
-  grid-template-rows: auto auto auto;
-}
-.topviewprojecttable {
-  margin-top: 20px ;
-  display: grid;
-  overflow-x: scroll;
-}
-.topviewprojecttable::-webkit-scrollbar {
-  display: none;
-}
+
+  .topviewprojecttable {
+    margin-top: 20px;
+    display: grid;
+    grid-template-rows: auto auto auto;
+  }
+
+  .topviewprojecttable {
+    margin-top: 20px;
+    display: grid;
+    overflow-x: scroll;
+  }
+
+  .topviewprojecttable::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 #firstsection {
@@ -480,20 +663,26 @@ select {
   align-items: center;
   width: 2;
 }
+
 @media only screen and (max-width: 900px) {
-  #firstsection{
-      margin-top: 90px;
+  #firstsection {
+    margin-top: 90px;
     display: none;
   }
-  .homepage{
+
+
+  .homepage {
     margin-top: 70px;
   }
-  #secondsection{
+
+  #secondsection {
     margin-top: 30pxpx;
   }
-  .coverphoto{
+
+  .coverphoto {
     display: none;
   }
+
   .topnavright {
     display: none;
   }
@@ -503,6 +692,7 @@ select {
     display: flex;
     justify-content: right;
   }
+
   .heading {
     font-size: 20pt;
   }
@@ -510,62 +700,69 @@ select {
   body {
     font-size: 15px;
   }
-    .maintitle{
-      font-size: 20px;
-    }
-    .cardsblk{
-      width: 35vw;
-    }
-    .image2{
-      width:inherit;
-      margin-top: 2px;
-    }
-    .table{
 
-    }
-    .cardsblk h2{
-      margin-top: 15px;
-      font-size: 15px;
-      margin-left: 5px;
-    }
-    .cardsblk p{
-      font-size: 15px;
-      margin-left: 5px;
-    }
+  .maintitle {
+    font-size: 20px;
+  }
+
+  .cardsblk {
+    width: 35vw;
+  }
+
+  .image2 {
+    width: inherit;
+    margin-top: 2px;
+  }
+
+  .table {}
+
+  .cardsblk h2 {
+    margin-top: 15px;
+    font-size: 15px;
+    margin-left: 5px;
+  }
+
+  .cardsblk p {
+    font-size: 15px;
+    margin-left: 5px;
+  }
+
   .topviewprojecttable {
-    margin-top: 20px ;
+    margin-top: 20px;
     display: flex;
     overflow-x: scroll;
-    
+
   }
+
   .topviewprojecttable::-webkit-scrollbar {
     display: none;
   }
+
   .topviewprojecttablee {
-    margin-top: 20px ;
+    margin-top: 20px;
     display: flex;
     overflow-x: scroll;
-    
+
   }
+
   .topviewprojecttablee::-webkit-scrollbar {
     display: none;
   }
-  .card{
+
+  .card {
     width: 168px;
   }
-  .image{
+
+  .image {
     width: 166px;
     height: 166px;
   }
-  .imagex{
+
+  .imagex {
     width: 166px;
     height: 166px;
   }
 }
 
 
-@media only screen and (max-width: 720px) {
-
-  
-}
-
+@media only screen and (max-width: 720px) {}
