--- a/style.css
+++ b/style.css
@@ -104,13 +104,29 @@ hr {
 
 }
 
+.imagee {
+  object-fit: cover;
+  height: 20vh;
+  max-height: 283px;
+  width: 100%;
+
+}
+
+.image {
+  object-fit: cover;
+  height: 19vh;
+  max-height: 223px;
+  width: 100%;
+
+  border-radius: 10px;
+
+}
+
 .image {
   object-fit: cover;
   height: 29vh;
   max-height: 283px;
   width: 100%;
-
-  border-radius: 10px;
 
 }
 
@@ -141,6 +157,14 @@ hr {
     border: rgb(237, 237, 237);
     border-style: solid;
     border-radius: 20px;
+  }
+
+  #secondsection {
+    margin-top: 30px;
+  }
+
+  #secondsectionn {
+    margin-top: 60px;
   }
 
   .image2 {
@@ -178,7 +202,53 @@ hr {
   border: 1px solid rgb(210, 210, 210);
   margin-left: 6px;
 }
+.a{
+  align-items: center;
+  height: fit-content;
+  margin-left: 15px;
+}
+.anotherone{
+  background: #fafafa;
+  margin-bottom: 0px;
+  align-items: center;
+  height: 48px;
+  display: flex;
+}
+.anotheronee{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 0px;
+  align-items: center;
+  height: 48px;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.anotherone .a p{
+  height: fit-content;
+  margin: auto;
+  position: relative;
+  color: #888;
+  font-size: 10px;
+  
+  margin-bottom: 0;
+}
+.anotherone .a h3{
+  height: fit-content;
+  align-items: center;
+  position: relative;
+  font-size: 14px;
+  color: #000;
+  text-transform: uppercase;
+  margin: 0px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+  line-height: 12px;
 
+}
 .offersvg {
   color: red;
   height: 15px;
@@ -187,6 +257,62 @@ hr {
   position: relative;
   align-items: center;
 }
+.offersvgg {
+  color:#732dd9;
+  height: 15px;
+  width: 15px;
+  margin-right: 4px;
+  position: relative;
+  align-items: center;
+}
+
+.card label {
+  margin-left: 15px;
+
+  position: relative;
+  font-weight: 800;
+  font-family: 'Lato', sans-serif;
+  font-size: 22px;
+  color: #000;
+  margin-bottom: 0px;
+  text-transform: capitalize;
+}
+.cardx label {
+  margin-left: 15px;
+
+  position: relative;
+  font-weight: 800;
+  font-family: 'Lato', sans-serif;
+  font-size: 22px;
+  color: #000;
+  margin-bottom: 0px;
+  text-transform: capitalize;
+}
+
+.card p {
+  margin-left: 15px;
+  position: relative;
+  color: #000;
+  margin-top: 4px;
+  font-family: 'Lato', sans-serif;
+  height: 36px;
+  overflow: hidden;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0;
+}
+.cardx p {
+  margin-left: 15px;
+  position: relative;
+  color: #000;
+  margin-top: 4px;
+  font-family: 'Lato', sans-serif;
+  height: 36px;
+  overflow: hidden;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0;
+}
 
 .roundbtn {
   background-color: #fff;
@@ -194,8 +320,6 @@ hr {
   display: flex;
   width: fit-content;
   align-items: center;
-  flex: auto;
-  width: fit-content;
   position: absolute;
   bottom: 10px;
   font-weight: 800;
@@ -204,6 +328,43 @@ hr {
   border-radius: 20px;
   padding: 5px 5px 5px 5px;
   font-size: 12px;
+}
+.roundbtnnn {
+  background-color: rgb(255, 255, 255);
+  box-shadow: inset;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  color: #000000;
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  justify-content: end;
+  right: 2px;
+  bottom: 10px;
+  font-weight: 500;
+  letter-spacing: -1;
+  border-radius: 20px;
+  padding: 5px 5px 5px 5px;
+  font-size: 12px;
+}
+
+.roundbtnn {
+  color: #732dd9;
+  display: flex;
+  position: absolute;
+  bottom: 65%;
+  font-weight: 800;
+  letter-spacing: -1;
+  right: 10px;
+  padding: 5px 5px 5px 5px;
+  font-size: 12px;
+}
+
+.roundbtnn img {
+  filter: brightness(100%);
+}
+
+.cardtop .imagee {
+  filter: brightness(60%);
 }
 
 .cardtop {
@@ -317,13 +478,15 @@ hr {
 .price {
   border-color: lightgray;
 }
-.search a{
+
+.search a {
   color: white;
   border: none;
   font-weight: 600;
   font-size: 15px;
   text-decoration: none;
 }
+
 .search {
   padding-left: 30px;
   padding-right: 30px;
@@ -368,31 +531,35 @@ select {
   align-items: center;
 }
 
-footer{
+footer {
   font-family: 'Lato', sans-serif;
   display: flex;
   align-items: center;
   height: 65px;
   background-color: #f2f2f2;
 }
-footer button{
+
+footer button {
   width: 35px;
   height: 35px;
   margin: 0%;
   border-radius: 50%;
   padding: 10px;
-  
+
   border: none;
   background: white;
   margin-right: 10px;
 
 }
-footer button svg{
+
+footer button svg {
   height: 100%;
   width: 100%;
-  color: rgb(136, 136, 136);;
+  color: rgb(136, 136, 136);
+  ;
 }
-.footerlinktoo{
+
+.footerlinktoo {
   display: flex;
   align-items: center;
   width: 100%;
@@ -400,24 +567,26 @@ footer button svg{
 
 }
 
-.footer{
+.footer {
   display: flex;
   align-items: center;
-  
+
 }
-.footlinks li{
+
+.footlinks li {
   display: inline;
   margin-right: 20px;
-  border-bottom: 1px solid ;
+  border-bottom: 1px solid;
   text-align: right;
-font-size: 12px;
+  font-size: 12px;
 }
-.footerlinktoo p{
+
+.footerlinktoo p {
   width: fit-content;
   display: inline;
   margin-right: 20px;
   text-align: right;
-font-size: 12px;
+  font-size: 12px;
 }
 
 
@@ -463,10 +632,17 @@ font-size: 12px;
 }
 
 .topviewprojecttablee {
-  margin-top: 20px;
+  margin-top: 40px;
   grid-gap: 15px;
   display: grid;
+
   grid-template-columns: auto auto auto auto auto;
+}
+
+.topviewprojecttableee {
+  margin-top: 40px;
+  width: fit-content;
+  border: 1px solid #dedcdc;
 }
 
 .moveinnowtable {
@@ -502,48 +678,55 @@ font-size: 12px;
   border-radius: 20px;
 }
 
-.getapp{ 
+.cardx {
+  border: 0px solid rgb(190, 190, 190);
+  border-radius: 20px;
+}
+
+.getapp {
   margin-top: 100px;
   height: 398.6px;
   background-color: #f5f5f5;
   background-repeat: no-repeat;
-    background-position: 100%;
-    background-size: 670px 100%;
+  background-position: 100%;
+  background-size: 670px 100%;
   background-image: url("https://realtorspk.com/_next/static/media/Mockup.29c3fb38c0962debd1de6fd2589543ce.svg");
 }
 
-.titleforapp{
+.titleforapp {
   margin-left: auto;
   margin-right: auto;
   width: 66vw;
   height: inherit;
 }
 
-.leftSideapp{
+.leftSideapp {
   height: inherit;
   display: flex;
   align-items: center;
 
 }
-.leftSideapp .app  h1{
+
+.leftSideapp .app h1 {
   font-size: 36px;
   margin-bottom: 0.59rem;
   margin-top: 0rem;
-  font-weight: 500;  
-}
-.leftSideapp .app p{
-  margin-bottom: 1.2rem;
-  margin-top: 0rem;
-  font-size: 20px; 
+  font-weight: 500;
 }
 
-.leftSideapp .app h1 span{
-  font-weight: bolder;  
+.leftSideapp .app p {
+  margin-bottom: 1.2rem;
+  margin-top: 0rem;
+  font-size: 20px;
+}
+
+.leftSideapp .app h1 span {
+  font-weight: bolder;
 }
 
 /*  */
 
-.getcontact{ 
+.getcontact {
 
   height: 338px;
   background: rgb(248, 248, 248);
@@ -551,40 +734,47 @@ font-size: 12px;
   padding-top: 1px;
   padding-bottom: 1px;
   background-repeat: no-repeat;
-    background-position: 100%;
-    background-size: 670px 100%;
+  background-position: 100%;
+  background-size: 670px 100%;
 
 }
-.getcontact .titleforcontact .contact h1{
+
+.getcontact .titleforcontact .contact h1 {
   font-size: 24px;
   color: #2a2a2a;
   margin-bottom: 5px;
   margin-bottom: 1.5rem
 }
-.getcontact .titleforcontact .contactnav{
+
+.getcontact .titleforcontact .contactnav {
   border-bottom: 2px solid #e7e7e7;
   padding: 15px 20px;
   width: fit-content;
   margin-bottom: 20px;
 }
-.getcontact .titleforcontact table{
+
+.getcontact .titleforcontact table {
   width: 100%;
 }
-.getcontact .titleforcontact table td{
+
+.getcontact .titleforcontact table td {
   padding-bottom: 10px;
   color: #888;
 }
-.getcontact .titleforcontact .contactnav li{
+
+.getcontact .titleforcontact .contactnav li {
   display: inline;
   border-bottom: 2px solid #e7e7e7;
   padding: 15px 20px;
 }
-.getcontact .titleforcontact .contactnav li:hover{
+
+.getcontact .titleforcontact .contactnav li:hover {
   display: inline;
   color: #732dd9;
   border-bottom: 2px solid #732dd9;
   padding: 15px 20px;
 }
+
 .mobilemenu:hover {
   color: black;
 
@@ -670,6 +860,16 @@ font-size: 12px;
   width: 2;
 }
 
+#secondsection {
+  margin-top: 30px;
+}
+
+#secondsectionn {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+
 @media only screen and (max-width: 900px) {
   #firstsection {
     margin-top: 90px;
@@ -682,7 +882,12 @@ font-size: 12px;
   }
 
   #secondsection {
-    margin-top: 30pxpx;
+    margin-top: 30px;
+  }
+
+  #secondsectionn {
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
 
   .coverphoto {
@@ -751,6 +956,13 @@ font-size: 12px;
 
   }
 
+  .topviewprojecttableee {
+    margin-top: 20px;
+    display: flex;
+    overflow-x: scroll;
+
+  }
+
   .topviewprojecttablee::-webkit-scrollbar {
     display: none;
   }
@@ -759,10 +971,13 @@ font-size: 12px;
     width: 168px;
   }
 
+
   .image {
     width: 166px;
     height: 166px;
   }
+
+
 
   .imagex {
     width: 166px;
