--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ hr {
 .image2 {
   display: flex;
   align-items: end;
-  border-radius: 10px;
+  border-radius: 5%;
   margin-top: 50px;
   margin-bottom: 0px;
   object-fit: cover;
